--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,27 @@
 <!doctype html>
+<!--
+ Hello... Newman.
+
+ I appreciate a good Easter Egg. So, you found me.
+
+ Thank you for taking the time to view source. I appreciate that.
+
+ This is an Angular application, deployed in an s3 bucket, routed through Route53.
+
+ I don't know what else to say, honestly, but I feel like a special connection with you through this "secret" message.
+
+ Do you remember the Konami code? Hint: ↑ ↑ ↓ ↓ ← → ← → b a
+
+-->
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Danielovieda.Com</title>
+  <title>The Homepage of Daniel Ovieda</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <script src="https://kit.fontawesome.com/deb5c16884.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
